# property-alert-notification

./: .env-sample  .gitignore  README.md  compose.yml  pyproject.toml
docs/: openapi.json
src/property_alert_notification/: __about__.py  initial_data.py  main.py
src/property_alert_notification/adapters/: event_processor.py  exceptions.py  queue.py
src/property_alert_notification/api/: deps.py  main.py
src/property_alert_notification/api/routes/: notifications.py  preferences.py
src/property_alert_notification/core/: config.py  db.py
src/property_alert_notification/models/: notification.py  preference.py
src/property_alert_notification/notification_worker/: worker.py
src/property_alert_notification/services/: exceptions.py  notification.py  preference.py
tests/: __init__.py  conftest.py
tests/integration/api/: data.py  test_api.py
tests/unit/adapters/: test_event_processor.py
tests/unit/services/: test_services.py
