[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "property-alert-notification"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Marcelo Baeza", email = "marcelo.baeza@endava.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi==0.111.0",
  "pydantic_settings==2.2.1",
  "sqlmodel==0.0.18",
  "aiosqlite==0.20.0",
  "aio_pika==9.4.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio==0.23.7"
]

[project.urls]
Documentation = "https://github.com/Marcelo Baeza/property-alert-notification#readme"
Issues = "https://github.com/Marcelo Baeza/property-alert-notification/issues"
Source = "https://github.com/Marcelo Baeza/property-alert-notification"

[tool.hatch.version]
path = "src/property_alert_notification/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/property_alert_notification tests}"

[tool.coverage.run]
source_pkgs = ["property_alert_notification", "tests"]
branch = true
parallel = true
omit = [
  "src/property_alert_notification/__about__.py",
]

[tool.coverage.paths]
property_alert_notification = ["src/property_alert_notification", "*/property-alert-notification/src/property_alert_notification"]
tests = ["tests", "*/property-alert-notification/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/*",
]
pythonpath = [
  "./src",
  "./src/property_alert_notification"
]